--- a/projects/first-paint/index.css
+++ b/projects/first-paint/index.css
@@ -131,7 +131,7 @@ nav ul {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: 0.5rem;
+  margin: 0;
 }
 .fp-nav section li,
 .fp-nav section a,
@@ -162,6 +162,7 @@ nav ul li {
   height: inherit;
   display: flex;
   align-items: center;
+  margin-top: 0;
 }
 .fp-nav section li + li,
 .fp-nav div li + li,
